Added randomization for level 1
Fixed: make fractions sit on the scale instead of centered on it
# 0.00.41 (61879) Feb 28, 2012
Added prototype for matching game
Buffer audio to avoid mark/reset not supported error
# 0.00.40 (61737) Feb 24, 2012
Added special case for half-pies since they should be vertical instead of horizontal (like pies)
Added bucket/dragging for cake slices
# 0.00.39 (61666) Feb 23, 2012
Fixed: exception when removing a slice after max spinner reduced
Fixed: When adding cups with the spinner, container cup fills up before animated cup gets there
Made it possible to drag water away from cups
When decreasing the max below the current value, animate slices to return
Put the "Max" label centered above the spinner and number
Reduced the size of the bucket icon so that larger representations will fit
Made the bucket bottom "bottomless" so the long vertical bars don't stick out the bottom
# 0.00.38 (61577) Feb 22, 2012
Fixed: Vertical bars should fill from the bottom to match water glasses
Fixed: Slices duplicated when dragging out of containers (not just bucket)
Fixed: Bucket pie slices shouldn't jump around when changing the max spinner
Made empty containers gray, but have them turn black when it contains anything (as in toggle-based version)
Disable numerator spinner as a function of min/max spinner
Update numerator/denominator based on max
Centered containers horizontally on the screen based on max value
Wired up max spinner (still several special cases to handle)
Added a spinner for Max (not wired up)
Made bucket supply of slices limitless
Added a fraction readout on the bucket next to the icon
For icon on bucket, show an entire "full icon" and the piece within it
Added shadows for animating pieces
Added buckets/dragging for vertical bars
# 0.00.37 (61374) Feb 15, 2012
Added buckets/dragging for horizontal bars
Factored factory pattern out of PieSet in preparation for more bucket/drag representations
# 0.00.36 (61366) Feb 14, 2012